frontend/src/css/NavBar.css
.navbar {
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #262626;
  padding: 0 3rem;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
  z-index: 1000;
}

@media (max-width: 768px) {
  .navbar {
    padding: 0 1.7rem;
  }
}

.navbar-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.logo {
  color: white;
  font-size: 1.5rem;
  font-weight: bold;
}

/* Desktop Links */
.nav-links {
  display: flex;
}

.nav-links button {
  color: white;
  text-decoration: none;
  font-size: 1rem;
  transition: color 0.3s ease;
  border: none;
  cursor: pointer;
  background: none;
  padding: .9rem 1.25rem;
}

.nav-links button:hover {
  color: #64ffcf;
}

/* Hamburger Menu for Mobile */
.hamburger {
  display: none;
  cursor: pointer;
  flex-direction: column;
  gap: 5px;
  padding: 1.2rem 0;
}

.hamburger .bar {
  width: 25px;
  height: 3px;
  background-color: white;
  border-radius: 3px;
}

/* Responsive Styles */
@media (max-width: 768px) {
  .nav-links {
    position: absolute;
    top: 60px;
    right: 0;
    background-color: #0a1930;
    width: 100%;
    height: calc(100vh - 60px);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transform: translateX(100%);
    transition: transform 0.3s ease;
  }

  .nav-links button {
    font-size: 2rem;
    padding: 1.5rem 3rem;
    transition: color 0.3s ease;
  }

  .nav-links.open {
    transform: translateX(0);
  }

  .hamburger {
    display: flex;
  }
}

